--- a/app/src/main/res/layout/stay_template.xml
+++ b/app/src/main/res/layout/stay_template.xml
@@ -1,45 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginStart="16dp"
-    >
+    android:layout_height="wrap_content"
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="92dp"
-        android:layout_height="70dp"
+        android:layout_height="92dp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:background="@drawable/round_image"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:padding="8dp"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
         android:src="@drawable/ic_launcher_foreground"/>
 
     <TextView
-        android:id="@+id/tvActivityName"
+        android:id="@+id/tvStayTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/imageView"
         android:layout_alignTop="@id/imageView"
-        android:fontFamily="@font/roboto_regular"
-        android:textSize="22sp"
-        android:textColor="@color/black"
-        android:text="Louise Leather" />
+        android:textSize="18sp"
+        android:text="Bed and Breakfast" />
+
 
     <TextView
-        android:id="@+id/tvCategoryName"
+        android:id="@+id/tvStayCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tvStayTitle"
         android:layout_marginStart="16dp"
-        android:textSize="14sp"
-        android:fontFamily="@font/roboto_regular"
         android:layout_toEndOf="@id/imageView"
-        android:layout_below="@id/tvActivityName"
-        android:text="Arts and Crafts" />
+        android:text="Self Catering"
+        tools:ignore="TouchTargetSizeCheck" />
+
 
 </RelativeLayout>
