Added theme for EditTexts

--- a/app/src/main/res/layout/activity_activities.xml
+++ b/app/src/main/res/layout/activity_activities.xml
@@ -65,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/frameParentActivities">
+
                 <EditText
                     android:id="@+id/etSearch"
                     android:layout_width="match_parent"
@@ -79,7 +80,7 @@
                     android:inputType="text"
                     android:textColor="@color/black"
                     android:textColorHint="@color/searchBarHint"
-                    android:textStyle="italic"
+                    android:theme="@style/EditTextTheme"
                     android:autofillHints="" />
                 <ListView
                     android:id="@+id/activityListView"
