--- a/app/src/main/res/layout/stay_template.xml
+++ b/app/src/main/res/layout/stay_template.xml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="92dp"
-        android:layout_height="92dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/round_image"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_launcher_foreground"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewHome"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        android:layout_width="120dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher_foreground" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tvStayTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@id/cardViewHome"
         android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/imageView"
-        android:layout_alignTop="@id/imageView"
-        android:textSize="18sp"
-        android:text="Bed and Breakfast" />
+        android:layout_toEndOf="@id/cardViewHome"
+        android:text="Bed and Breakfast"
+        android:textSize="18sp" />
 
 
     <TextView
@@ -33,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvStayTitle"
         android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/imageView"
+        android:layout_toEndOf="@id/cardViewHome"
         android:text="Self Catering"
         tools:ignore="TouchTargetSizeCheck" />
 
