--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,5 +2,7 @@
 
     <style name="Widget.Theme.DevRightStillbaaiTourism.MyView" parent="">
         <item name="android:background">@color/gray_400</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
+
     </style>
 </resources>
