--- a/app/src/main/res/layout/activity_stay.xml
+++ b/app/src/main/res/layout/activity_stay.xml
@@ -92,9 +92,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_below="@id/etSearch"
+
                         android:layout_centerInParent="true"
-                        android:divider="@android:color/darker_gray"
-                        android:dividerHeight="1dp" />
+                        android:divider="@android:color/transparent"
+                        android:dividerHeight="0dp" />
                 </RelativeLayout>
             </RelativeLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
