--- a/app/src/main/res/layout/stay_template.xml
+++ b/app/src/main/res/layout/stay_template.xml
@@ -1,49 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardViewListItem"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_height="80dp"
+    android:layout_gravity="top|center"
+    android:layout_marginBottom="8dp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:padding="16dp"
+    app:cardElevation="40dp"
+    android:focusable="true">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewHome"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
-        android:layout_width="120dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp">
+    <RelativeLayout
+        android:id="@+id/relLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewHome"
+            android:layout_width="120dp"
+            android:layout_height="70dp"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="10dp">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_launcher_foreground" />
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tvStayTitle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_foreground" />
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/tvStayTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/cardViewHome"
-        android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/cardViewHome"
-        android:text="Bed and Breakfast"
-        android:textSize="18sp" />
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/cardViewHome"
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@id/cardViewHome"
+            android:text="Bed and Breakfast"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
 
-    <TextView
-        android:id="@+id/tvStayCategory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvStayTitle"
-        android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/cardViewHome"
-        android:text="Self Catering"
-        tools:ignore="TouchTargetSizeCheck" />
+        <TextView
+            android:id="@+id/tvStayCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvStayTitle"
+            android:layout_marginStart="16dp"
+            android:layout_toEndOf="@id/cardViewHome"
+            android:text="Self Catering"
+            tools:ignore="TouchTargetSizeCheck" />
+
+    </RelativeLayout>
 
 
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
