--- a/app/src/main/res/layout/activity_businesses.xml
+++ b/app/src/main/res/layout/activity_businesses.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Businesses">
+
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
@@ -36,7 +37,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/businesses_image_background"/>
+                    android:src="@drawable/businesses_image_background" />
 
                 <ImageButton
                     android:id="@+id/btnMenu"
@@ -63,39 +64,66 @@
                     android:textSize="45sp"
                     android:textStyle="bold" />
             </FrameLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/frameParentBusinesses">
-                <EditText
-                    android:id="@+id/etSearch"
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardViewSearch"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="25dp"
                     android:layout_marginBottom="16dp"
-                    android:alpha="0.6"
-                    android:gravity="center"
-                    android:hint="@string/searchBar"
-                    android:inputType="text"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/searchBarHint"
-                    android:textStyle="italic"
-                    android:autofillHints="" />
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/etSearch"
-                    tools:ignore="SpeakableTextPresentCheck">
-                    <LinearLayout
-                        android:id="@+id/linearBusinessesListings"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="8dp">
+
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/custom_corner_radius_stay"
-                        android:orientation="vertical">
-                    </LinearLayout>
-                </ScrollView>
+                        android:padding="8dp">
+
+                        <EditText
+                            android:id="@+id/etSearch"
+                            android:layout_width="300dp"
+                            android:layout_height="match_parent"
+                            android:autofillHints=""
+                            android:background="@android:color/transparent"
+                            android:gravity="center"
+                            android:hint="@string/searchBar"
+                            android:inputType="text"
+                            android:maxLines="1"
+                            android:textAlignment="center"
+                            android:textColor="@color/black"
+                            android:textColorHint="@color/searchBarHint"
+                            android:theme="@style/EditTextTheme"
+                            tools:ignore="TouchTargetSizeCheck" />
+
+                        <ImageButton
+                            android:id="@+id/btnSearch"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_toEndOf="@+id/etSearch"
+                            android:background="@android:color/transparent"
+                            android:contentDescription="@string/About"
+                            android:src="@drawable/baseline_search_24"
+                            tools:ignore="TouchTargetSizeCheck" />
+
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+
+                <ListView
+                    android:id="@+id/listView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/cardViewSearch"
+                    android:layout_centerInParent="true"
+                    android:dividerHeight="1dp" />
             </RelativeLayout>
         </RelativeLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
