--- a/app/src/main/res/layout/activity_stay.xml
+++ b/app/src/main/res/layout/activity_stay.xml
@@ -71,31 +71,60 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/frameParentStay">
-                    <EditText
-                        android:id="@+id/etSearch"
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardViewSearch"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:layout_marginStart="25dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="25dp"
                         android:layout_marginBottom="16dp"
-                        android:alpha="0.6"
-                        android:gravity="center"
-                        android:hint="@string/searchBar"
-                        android:inputType="text"
-                        android:textColor="@color/black"
-                        android:textColorHint="@color/searchBarHint"
-                        android:textStyle="italic"
-                        android:autofillHints="" />
+                        app:cardElevation="8dp"
+                        app:cardCornerRadius="8dp">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="8dp">
+
+                            <EditText
+                                android:id="@+id/etSearch"
+                                android:layout_width="300dp"
+                                android:layout_height="match_parent"
+                                android:autofillHints=""
+                                android:background="@android:color/transparent"
+                                android:gravity="center"
+                                android:hint="@string/searchBar"
+                                android:inputType="text"
+                                android:maxLines="1"
+                                android:textAlignment="center"
+                                android:theme="@style/EditTextTheme"
+                                android:textColor="@color/black"
+                                android:textColorHint="@color/searchBarHint"
+                                tools:ignore="TouchTargetSizeCheck" />
+
+                            <ImageButton
+                                android:id="@+id/btnSearch"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:layout_toEndOf="@+id/etSearch"
+                                android:background="@android:color/transparent"
+                                android:contentDescription="@string/About"
+                                android:src="@drawable/baseline_search_24"
+                                tools:ignore="TouchTargetSizeCheck" />
+
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
                     <ListView
                         android:id="@+id/stayListView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_below="@id/etSearch"
-
+                        android:layout_below="@id/cardViewSearch"
                         android:layout_centerInParent="true"
-                        android:divider="@android:color/transparent"
-                        android:dividerHeight="0dp" />
+                        android:dividerHeight="1dp" />
                 </RelativeLayout>
             </RelativeLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
