--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,49 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardViewListItem"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_margin="8dp"
+    android:layout_height="108dp">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="92dp"
-        android:layout_height="92dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/round_image"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_launcher_foreground"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewHome"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:cardCornerRadius="8dp"
+        android:layout_margin="8dp"
+        app:cardElevation="10dp">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_launcher_foreground" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/imageView"
-        android:layout_alignTop="@id/imageView"
+        android:layout_toEndOf="@id/cardViewHome"
+        android:textColor="@color/black"
+        android:layout_alignTop="@id/cardViewHome"
         android:textSize="18sp"
         android:text="Pizza World" />
 
-    <TextView
-        android:id="@+id/tvWebsite"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/imageView"
-        android:layout_below="@id/titleTextView"
-        android:drawableStart="@drawable/website"
-        android:text="" />
 
     <TextView
         android:id="@+id/tvContactNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvWebsite"
+        android:layout_below="@id/titleTextView"
         android:layout_marginStart="16dp"
-        android:layout_toEndOf="@id/imageView"
+        android:layout_marginTop="4dp"
+        android:layout_toEndOf="@id/cardViewHome"
         android:drawableStart="@drawable/call"
+        android:drawableTint="@color/black"
+        android:drawablePadding="8dp"
         android:text="000 000 0000"
         tools:ignore="TouchTargetSizeCheck" />
 
