Business Detail added

--- a/app/src/main/res/layout/activity_businesses.xml
+++ b/app/src/main/res/layout/activity_businesses.xml
@@ -118,7 +118,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <ListView
-                    android:id="@+id/listView"
+                    android:id="@+id/businessListView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@id/cardViewSearch"
